@@ -150,6 +150,25 @@
         extra :: binary()
     }).
 
+% for features specific to Erlang/OTP version 21.x (and later versions)
+-ifdef(ERLANG_OTP_VERSION_19).
+-else.
+-ifdef(ERLANG_OTP_VERSION_20).
+-else.
+-define(ERLANG_OTP_VERSION_21_FEATURES, true).
+-endif.
+-endif.
+
+% Get the stacktrace in a way that is backwards compatible
+-ifdef(ERLANG_OTP_VERSION_21_FEATURES).
+-define(STACKTRACE(ErrorType, Error, ErrorStackTrace),
+        ErrorType:Error:ErrorStackTrace ->).
+-else.
+-define(STACKTRACE(ErrorType, Error, ErrorStackTrace),
+        ErrorType:Error ->
+            ErrorStackTrace = erlang:get_stacktrace(),).
+-endif.
+
 %%%------------------------------------------------------------------------
 %%% External interface functions
 %%%------------------------------------------------------------------------
@@ -585,9 +604,9 @@ driver_open(?MODULE_EONBLAST, HostName, UserName, Password,
             % (not using the ?MODULE_EONBLAST connection manager process)
             {ok, Connection}
     catch
-        ErrorType:Error ->
+        ?STACKTRACE(ErrorType, Error, ErrorStackTrace)
             ?LOG_ERROR("start failed ~p ~p~n~p",
-                       [ErrorType, Error, erlang:get_stacktrace()]),
+                       [ErrorType, Error, ErrorStackTrace]),
             {error, Error}
     end.
 
