@@ -60,9 +60,8 @@
 -define(DEFAULT_RSA_PASSPHRASE,         undefined).
 -define(DEFAULT_ECDSA_PASSPHRASE,       undefined).
 
-% XXX switch to the opaque types when ssh_connection functions get fixed
--type connection_handle() :: {ssh:ssh_connection_ref() | pid(),
-                              ssh:ssh_channel_id() | pos_integer()}.
+-type connection_handle() :: {ssh:connection_ref(),
+                              ssh:channel_id()}.
 
 -record(ssh_client,
     {
