@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2018-05-03 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add Erlang/OTP 21.0 compatibility
+
 2018-04-25 Michael Truog   <mjtruog at protonmail dot com>
 
     * Disable the Erlang shell command line interface in the ssh daemon
